--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reach/combobox": "^0.10.5",
+    "@reach/router": "^1.3.4",
     "@react-google-maps/api": "^1.9.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
