--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^16.13.1",
     "react-burger-menu": "^2.7.0",
     "react-dom": "^16.13.1",
-    "react-facebook-login": "^4.1.1",
+    "react-firebaseui": "^4.1.0",
     "react-places-autocomplete": "^7.3.0",
     "react-scripts": "3.4.1",
     "use-places-autocomplete": "^1.3.10"
