--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/reach__router": "^1.3.6",
     "dotenv": "^8.2.0",
     "firebase": "^7.17.1",
     "geolib": "^3.3.1",
