--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-firebaseui": "^4.1.0",
     "react-places-autocomplete": "^7.3.0",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.2.0",
     "typescript": "^4.0.3",
     "use-places-autocomplete": "^1.3.10"
   },
