--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^16.9.51",
     "@types/react-burger-menu": "^2.6.2",
+    "@types/react-dom": "^16.9.8",
     "@types/react-places-autocomplete": "^7.2.6",
     "babel-eslint": "^10.1.0",
     "eslint-plugin-import": "^2.22.0",
