--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/reach__router": "^1.3.6",
+    "@types/styled-components": "^5.1.4",
     "dotenv": "^8.2.0",
     "firebase": "^7.17.1",
     "geolib": "^3.3.1",
