--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.17.1",
     "geolib": "^3.3.1",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-burger-menu": "^2.7.0",
     "react-dom": "^16.13.1",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.162",
     "@types/react": "^16.9.51",
     "@types/react-burger-menu": "^2.6.2",
     "@types/react-dom": "^16.9.8",
