--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react-places-autocomplete": "^7.3.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.2.0",
-    "typescript": "^4.0.3",
     "use-places-autocomplete": "^1.3.10"
   },
   "scripts": {
@@ -55,11 +54,14 @@
     "@types/react-burger-menu": "^2.6.2",
     "@types/react-dom": "^16.9.8",
     "@types/react-places-autocomplete": "^7.2.6",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "babel-eslint": "^10.1.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "typescript": "^4.0.3"
   }
 }
